fix note color for dark mode

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -39,6 +39,15 @@ p.note::before {
   font-weight: bold;
 }
 
+p.note, blockquote.note {
+  border-left-color: #7253ed; 
+
+}
+p.note::before {
+  color: #7253ed;
+  font-weight: bold;
+}
+
 .label {
     border-radius: $border-radius;
     margin-left: 0;
